# image-optimizer

./: .gitignore  LICENSE  README.md  create_test_images.py  image_optimizer.py  image_optimizer.spec  pyproject.toml  requirements.txt  run.py  run.sh  setup.py
